@@ -25,20 +25,23 @@ object CassandraSparkBuild extends Build {
     id = "root",
     base = file("."),
     settings = parentSettings,
-    aggregate = Seq(connector, connectorJava)
+    aggregate = Seq(connector, connectorJava, demos)
   )
 
-  lazy val connector = LibraryProject("spark-cassandra-connector", Seq(libraryDependencies ++= Dependencies.spark))
+  lazy val connector = LibraryProject("spark-cassandra-connector", Seq(libraryDependencies ++= Dependencies.connector))
 
-  lazy val connectorJava = LibraryProject("spark-cassandra-connector-java", Seq(libraryDependencies ++= Dependencies.spark), connectorCp)
+  lazy val connectorJava = LibraryProject("spark-cassandra-connector-java", Seq(libraryDependencies ++= Dependencies.connector),
+    Seq(connector % "compile;runtime->runtime;test->test;it->it,test;provided->provided"))
+
+  lazy val demos = Project(
+    id = "spark-cassandra-connector-demos",
+    base = file("spark-cassandra-connector-demos"),
+    settings = demoSettings ++ Seq(libraryDependencies ++= Dependencies.demos),
+    dependencies = Seq(connector, connectorJava))
 
   def LibraryProject(name: String, dsettings: Seq[Def.Setting[_]], cpd: Seq[ClasspathDep[ProjectReference]] = Seq.empty): Project =
     Project(name, file(name), settings = defaultSettings ++ dsettings, dependencies = cpd) configs (IntegrationTest)
 
-  /* Classpaths */
-
-  lazy val connectorCp: Seq[ClasspathDep[ProjectReference]] =
-    Seq(connector % "compile;runtime->runtime;test->test;it->it,test;provided->provided")
 }
 
 object Dependencies {
@@ -47,11 +50,14 @@ object Dependencies {
     import Versions._
 
     val akkaActor         = "com.typesafe.akka"       %% "akka-actor"           % Akka           % "provided"                 // ApacheV2
+    val akkaCluster       = "com.typesafe.akka"       %% "akka-cluster"         % Akka                                        // ApacheV2
+    val akkaContrib       = "com.typesafe.akka"       %% "akka-contrib"         % Akka                                        // ApacheV2
     val akkaRemote        = "com.typesafe.akka"       %% "akka-remote"          % Akka           % "provided"                 // ApacheV2
     val akkaSlf4j         = "com.typesafe.akka"       %% "akka-slf4j"           % Akka           % "provided"                 // ApacheV2
     val cassandraThrift   = "org.apache.cassandra"    % "cassandra-thrift"      % Cassandra
     val cassandraClient   = "org.apache.cassandra"    % "cassandra-clientutil"  % Cassandra
     val cassandraDriver   = "com.datastax.cassandra"  % "cassandra-driver-core" % CassandraDriver              withSources()  // ApacheV2
+    val commonsLang3      = "org.apache.commons"      % "commons-lang3"         % CommonsLang3                                // ApacheV2
     val config            = "com.typesafe"            % "config"                % Config         % "provided"                 // ApacheV2
     val guava             = "com.google.guava"        % "guava"                 % Guava                        force()
     val jodaC             = "org.joda"                % "joda-convert"          % JodaC
@@ -59,9 +65,8 @@ object Dependencies {
     val lzf               = "com.ning"                % "compress-lzf"          % Lzf            % "provided"
     val reflect           = "org.scala-lang"          % "scala-reflect"         % Scala
     val slf4jApi          = "org.slf4j"               % "slf4j-api"             % Slf4j          % "provided"                 // MIT
-    val commonsLang3      = "org.apache.commons"      % "commons-lang3"         % CommonsLang3                                // ApacheV2
-    val sparkCore         = "org.apache.spark"        %% "spark-core"           % Spark          % "provided"  exclude("com.google.guava", "guava") // ApacheV2
-    val sparkStreaming    = "org.apache.spark"        %% "spark-streaming"      % Spark          % "provided"  exclude("com.google.guava", "guava") // ApacheV2
+    val sparkCore         = "org.apache.spark"        %% "spark-core"           % Spark             exclude("com.google.guava", "guava") // ApacheV2
+    val sparkStreaming    = "org.apache.spark"        %% "spark-streaming"      % Spark             exclude("com.google.guava", "guava") // ApacheV2
 
     object Metrics {
       val metricsJson     = "com.codahale.metrics"    % "metrics-json"          % MetricsJson    % "provided"
@@ -87,9 +92,18 @@ object Dependencies {
 
   val testKit = Seq(Test.akkaTestKit, Test.cassandraServer, Test.commonsIO, Test.junit, Test.junitInterface, Test.scalatest)
 
-  val spark = testKit ++ metrics ++ logging ++ Seq(
-    akkaActor, akkaRemote, akkaSlf4j, cassandraThrift, cassandraClient, cassandraDriver,
-    config, guava, jodaC, jodaT, lzf, reflect, sparkCore, sparkStreaming, commonsLang3
+  val akka = Seq(akkaActor, akkaRemote, akkaSlf4j)
+
+  val cassandra = Seq(cassandraThrift, cassandraClient, cassandraDriver)
+
+  val spark = Seq(sparkCore, sparkStreaming)
+
+  val connector = testKit ++ metrics ++ logging ++ akka ++ cassandra ++ spark.map(_ % "provided") ++ Seq(
+    commonsLang3, config, guava, jodaC, jodaT, lzf, reflect
+  )
+
+  val demos = metrics ++ logging ++ akka ++ cassandra ++ spark ++ Seq(
+    akkaCluster, akkaContrib, commonsLang3, config, guava, jodaC, jodaT, lzf, reflect
   )
 
 }
