@@ -7,4 +7,3 @@ addSbtPlugin("com.typesafe.sbt" % "sbt-git" % "0.6.2")
 addSbtPlugin("com.typesafe" % "sbt-mima-plugin" % "0.1.6")
 
 addSbtPlugin("com.typesafe.sbt" % "sbt-pgp" % "0.8.3")
-
