@@ -6,7 +6,7 @@ object TableCopyDemo extends App with DemoApp {
 
   import com.datastax.spark.connector._
 
-  CassandraConnector(conf).withSessionDo { session =>
+  CassandraConnector(conf).withSessionDo { session ⇒
     session.execute("CREATE KEYSPACE IF NOT EXISTS test WITH REPLICATION = {'class': 'SimpleStrategy', 'replication_factor': 1 }")
     session.execute("CREATE TABLE IF NOT EXISTS test.source (key INT PRIMARY KEY, data VARCHAR)")
     session.execute("CREATE TABLE IF NOT EXISTS test.destination (key INT PRIMARY KEY, data VARCHAR)")
